--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;  
   color: white;
-  background-color: var(--color-gray-950);
+  background-color: var(--color-slate-700);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
